turtleart.lessons.turtleart.Main.Flower.scala.error
Source:25: error: ')' expected but '<-' found.
	for((i<-1 to 8) {
              ^